--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Luxurious+Roman&family=Roboto:ital,wght@0,100;0,300;0,500;0,700;1,400&display=swap"
         rel="stylesheet">
-    <title>Yoga</title>
+    <title>Yoga - Interface </title>
 </head>
 
 <body>
